force-app/main/default/objects/Metric_Snapshot__c/Metric_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Metric Snapshot</label>
    <pluralLabel>Metric Snapshots</pluralLabel>
    <nameField>
        <displayFormat>MS-{0000000}</displayFormat>
        <label>Metric Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>