force-app/main/default/objects/Metric_Snapshot__c/fields/Active_Contributors__c.field-meta.xml
<CustomField>
    <fullName>Active_Contributors__c</fullName>
    <label>Active Contributors</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>