force-app/main/default/objects/Metric_Snapshot__c/fields/Avg_Lead_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Avg_Lead_Time_Hours__c</fullName>
    <label>Average Lead Time (Hours)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>