force-app/main/default/objects/Metric_Snapshot__c/fields/Avg_PR_Cycle_Hours__c.field-meta.xml
<CustomField>
    <fullName>Avg_PR_Cycle_Hours__c</fullName>
    <label>Average PR Cycle (Hours)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>