force-app/main/default/objects/Metric_Snapshot__c/fields/Closed_PRs__c.field-meta.xml
<CustomField>
    <fullName>Closed_PRs__c</fullName>
    <label>Closed PRs</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>