force-app/main/default/objects/Metric_Snapshot__c/fields/Deployment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Frequency__c</fullName>
    <label>Deployment Frequency</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>