force-app/main/default/objects/Metric_Snapshot__c/fields/Merged_PRs__c.field-meta.xml
<CustomField>
    <fullName>Merged_PRs__c</fullName>
    <label>Merged PRs</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>