force-app/main/default/objects/Metric_Snapshot__c/fields/Open_PRs__c.field-meta.xml
<CustomField>
    <fullName>Open_PRs__c</fullName>
    <label>Open PRs</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>